# JCEVB

./: Cargo.toml  rust-toolchain
src/evb/: channel_data.rs  channel_map.rs  kinematics.rs
src/ui/: app.rs
